tdf#115843 avoid using transparent virtualdevice when 100% opaque

which for the common case avoids the narrowing of hidpi outputdevices
through non-hidpi bitmaps

Change-Id: Ibdc004a0946e8cb118818e58a01e5791c869353a
Reviewed-on: https://gerrit.libreoffice.org/69930
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit b1f961e3a459d2772f12da556ab74fa635d6a46a)

after...

copy between the outputdevices without interim Bitmap

Change-Id: I6c0097b1b069cad2771c94210986714d59431e4f
Reviewed-on: https://gerrit.libreoffice.org/69929
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 11fe18ea21974e4fdc01a3f4a455725cec8ce11a)
Reviewed-on: https://gerrit.libreoffice.org/69938
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>